# stewie-peter-ai-reel-maker

./: .dockerignore  .env.example  .gitignore  Dockerfile  app.py  brainrot.py  docker-compose.yml  pyproject.toml  readme.md  requirements.txt  server.py
.cursor/plans/: bg_thumbnails_+_upload_progress_4c192600.plan.md  obsidian_frontend_revamp_2007cf9f.plan.md
alembic/: env.py
alembic/versions/: 001_initial_schema.py
assets/: README.md
backend/: .env.example  __init__.py  alembic.ini  brainrot.py  cli.py  db.py  main.py  migrate.py  paths.py  requirements.txt  s3_storage.py  thumbnail.py
backend/alembic/versions/: 002_generation_elapsed_seconds.py  003_generation_render_meta.py
backend/assets/: README.md
backend/db/: __init__.py  models.py  repository.py  session.py  url.py
core/: .env.example  __init__.py  brainrot.py  cli.py  paths.py
core/assets/: README.md
cut-ffmpeg/: main.py
db/: drizzle.config.ts  package.json  schema.ts  tsconfig.json
db/migrations/: 0000_initial.sql  0001_user_backgrounds.sql
docs/: ARCHITECTURE.md  DEPLOY_DOKPLOY.md  DEVELOPMENT.md  OPERATIONS.md  fish-audio.md  test-kokoro.md
docs/stitch_single_video_preview/obsidian_reel/: DESIGN.md
docs/stitch_single_video_preview/reelmaker_video_editor/: code.html
docs/stitch_single_video_preview/renders_dashboard/: code.html
frontend/: .env.example  eslint.config.js  index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css  main.tsx  vite-env.d.ts
storage/public/: README.md
web/: index.html
(+18 files in other folders)
